--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cat-Photo-App</title>
 </head>
-
 <body>
 
 
@@ -17,9 +16,10 @@
             <p>Everyone loves <a href="https://cdn.freecodecamp.org/curriculum/cat-photo-app/running-cats.jpg">cute
                     cats</a> online!</p>
             <p>See more <a target="_blank" href="https://freecatphotoapp.com">cat photos</a> in our gallery.</p>
-            <a href="https://freecatphotoapp.com"><img
-                    src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg"
-                    alt="A cute orange cat lying on its back."></a>
+            <figure><a href="https://freecatphotoapp.com">
+                    <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg"
+                        alt="A cute orange cat lying on its back."></a></figure>
+
         </section>
         <section>
             <h2>Cat Lists</h2>
@@ -33,11 +33,26 @@
                 <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg"
                     alt="A slice of lasagna on a plate.">
                 <figcaption>
-                   Cats love lasagna
+                    Cats <em>love</em> lasagna
                 </figcaption>
+            </figure>
+            <h3>Top 3 things cats hate:</h3>
+            <ol>
+                <li>flea treatment</li>
+                <li>thunder</li>
+                <li>other cats</li>
+            </ol>
+            <figure>
+                <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg"
+                    alt="Five cats looking around a field.">
+                <figcaption>Cats <strong>hate </strong> other cats.</figcaption>
             </figure>
         </section>
     </main>
+    <footer>
+        <p>No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp.org</a> </p>
+    </footer>
+    
 </body>
 
 </html>
